force-app/main/default/objects/ApplicationLine__c/fields/ApplicationLineNumber__c.field-meta.xml
<CustomField>
    <fullName>ApplicationLineNumber__c</fullName>
    <label>Application Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>