force-app/main/default/objects/ApplicationLine__c/fields/LineItemDescription__c.field-meta.xml
<CustomField>
    <fullName>LineItemDescription__c</fullName>
    <label>Line Item Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>