force-app/main/default/objects/ApplicationLine__c/fields/RemainedQuantity__c.field-meta.xml
<CustomField>
    <fullName>RemainedQuantity__c</fullName>
    <formula>Quantity__c -  ReturnedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remained Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>