force-app/main/default/objects/ApplicationLine__c/fields/ReturnQuantityType__c.field-meta.xml
<CustomField>
    <fullName>ReturnQuantityType__c</fullName>
    <label>Return Quantity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReturnQuantityType</valueSetName>
    </valueSet>
</CustomField>