force-app/main/default/objects/ApplicationLine__c/fields/SlipNumber2__c.field-meta.xml
<CustomField>
    <fullName>SlipNumber2__c</fullName>
    <label>Slip Number-2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>